--- a/style.css
+++ b/style.css
@@ -3,8 +3,11 @@
   padding: 0px;
   box-sizing: border-box;
 }
-
-#map {
-  height: 100vh;
-  width: 100vw;
+.title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+  font-size: 30px;
+  background-color: rgba(192, 192, 192, 0.5);
 }
